# Hello-VT-rp

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs  vmcall.S
hypervisor/: Cargo.toml  README.md
hypervisor/src/: allocator.rs  capture_registers.nasm  demo.rs  hypervisor.rs  logger.rs  main.rs  paging_structures.rs  serial_logger.rs  switch_stack.nasm  switch_stack.rs  x86_instructions.rs
hypervisor/src/intel_vt/: descriptors.rs  epts.rs  hlat.rs  mod.rs  mtrr.rs  run_vmx_vm.S  vm.rs  vmx.rs
hypervisor/src/vmx/: descriptors.rs  epts.rs  hlat.rs  mod.rs  mtrr.rs  vm.rs  vmx.rs
os_client/: Cargo.toml
os_client/src/: main.rs
tests/: startup.nsh
uefi_client/: Cargo.toml
uefi_client/src/: main.rs  paging_structures.rs  shell.rs
xtask/: Cargo.toml
xtask/src/: bochs.rs  cargo.rs  main.rs  vmware.rs
xtask/src/vmtest/: bochs.rs  mod.rs  vmware.rs
