cargo-features = ["per-package-target"]

[package]
name = "hlat"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A sample hypervisor that demonstrate use of Intel VT-rp"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
forced-target = "x86_64-unknown-uefi"

# no_std cannot support `cargo test` and `cargo bench`
[[bin]]
name = "hlat"
test = false
bench = false

[dependencies]
bitfield = "0.14"
derivative = { version ="2.2", features = ["use_core"]}
log = "0.4"
num-derive = { version= "0.3", default-features= false }
num-traits = { version= "0.2", default-features= false }
spin = "0.9"
uefi = "0.23"
uefi-services = { version = "0.20", default-features = false, features = ["panic_handler"]}
x86 = "0.52"

[features]
default = []

# Enable VT-rp. Not compatible with VMware or Bochs.
enable_vt_rp = []
