[package]
name = "vt-rp"
description = "A simple hypervisor demonstrating the use of the Intel VT-rp technology"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

# no_std cannot support `cargo test` and `cargo bench`
[[bin]]
name = "vt-rp"
test = false
bench = false

[dependencies]
bitfield.workspace = true
derivative = { version = "2.2", features = ["use_core"] }
log = "0.4"
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
spin = "0.9"
uefi.workspace = true
x86.workspace = true

[features]
default = ["enable_vt_rp"]

# Enable VT-rp. Disable this for testing with VMware or Bochs.
enable_vt_rp = []
