cargo-features = ["per-package-target"]

[package]
name = "uefi_client"
description = "Demo client for a UEFI environment"
forced-target = "x86_64-unknown-uefi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# no_std cannot support `cargo test` and `cargo bench`
[[bin]]
name = "uefi_client"
test = false
bench = false

[dependencies]
uefi = "0.24"
uefi-services = "0.21"
