[package]
name = "uefi_client"
description = "Demo client for a UEFI environment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# no_std cannot support `cargo test` and `cargo bench`
[[bin]]
name = "uefi_client"
test = false
bench = false

[dependencies]
bitfield.workspace = true
uefi.workspace = true
uefi-services = { version = "0.23", default-features = false }
x86.workspace = true
